Finished acme photography tutorial.

--- a/acme-photography/index.html
+++ b/acme-photography/index.html
@@ -15,7 +15,7 @@
                 <div id="landingTextInner">
                     <h1>Acme Photography</h1>
                     <h2>Beautiful Natural Photography</h2>
-                    <a href="#images" id="viewWork">View Work</a>
+                    <a href="#images" id="viewWork" class="btn">View Work</a>
                 </div>
             </div>
             <div id="landingImage"></div>
